--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ li {
 
 #WeekLinks a {
   flex-grow: 1;
-  background-color: #004876;
+  background-color: #9f0909;
   color: #fff;
   padding: 10px;
   margin: 0 .5rem;
